@@ -1,4 +1,5 @@
 v 1.5.9
+    - #406: Export button to work without the need of a popup window or new tab
     - Clean-up redundant JavaScript load if it is not required.
     - Remove Export as it is a flash plugin and the browser is showing it as a blocked plugin for security reasons.
 v 1.5.8
